[gd_scene load_steps=7 format=2]

[ext_resource path="res://blocks/blk.gd" type="Script" id=1]
[ext_resource path="res://font/SEVESBRG.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://blocks/blk_sprites.tscn" type="PackedScene" id=3]
[ext_resource path="res://blocks/blk_layer.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="CircleShape2D" id=2]
radius = 55.0

[node name="blk" type="Node2D"]
script = ExtResource( 1 )

[node name="blk_sprites" parent="." instance=ExtResource( 3 )]

[node name="blk_layer" parent="." instance=ExtResource( 5 )]
z_index = 2

[node name="lab" type="Label" parent="."]
margin_left = -139.25
margin_top = -11.0
margin_right = 135.75
margin_bottom = 86.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 1, 0.0392157, 1 )
text = "C R"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timer_selfdestruct" type="Timer" parent="."]
one_shot = true

[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="timeout" from="Timer_selfdestruct" to="." method="_on_Timer_selfdestruct_timeout"]
